updated explanatory notes

--- a/Udemy Course Data Analyst Exercises/Logistic Regression/Logistic Regression - Predicting Admittance based on Gender and SAT score.ipynb
+++ b/Udemy Course Data Analyst Exercises/Logistic Regression/Logistic Regression - Predicting Admittance based on Gender and SAT score.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predicting Admittance (yes/no) from SAT score and Gender"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,7 +20,24 @@
     "import seaborn as sns\n",
     "sns.set()\n",
     "from scipy import stats\n",
-    "stats.chisqprob = lambda chisq, df: stats.chi2.sf(chisq, df)"
+    "stats.chisqprob = lambda chisq, df: stats.chi2.sf(chisq, df)\n",
+    "\n",
+    "# Pandas library is used for importing various file types e.g. csv, excel, json.\n",
+    "# also used for manipulation and cleaning dataframes.\n",
+    "\n",
+    "# Numpy library has functions used for working with arrays and matrices\n",
+    "# faster, clearer and better quality code using Numpy\n",
+    "\n",
+    "# Matplotlib is a 2D plotting library for visualising data in Python\n",
+    "\n",
+    "# Seaborn is used for improving Matplotlib visualisations to make them more visually attractive.\n",
+    "# It builds on top of MatPlotLib and works with Pandas for data structures\n",
+    "\n",
+    "# Statsmodels.api is a module that provides classes and functions for the estimation of many different statistical models,\n",
+    "# as well as for conducting statistical tests, and statistical data exploration\n",
+    "\n",
+    "# scipy is used for solving mathematical, scientific, engineering, and technical problems.\n",
+    "# It allows users to manipulate the data and visualize the data using a wide range of high-level Python commands."
    ]
   },
   {
@@ -143,7 +167,9 @@
    ],
    "source": [
     "raw_data = pd.read_csv(r'2.02.+Binary+predictors.csv')\n",
-    "raw_data"
+    "raw_data\n",
+    "\n",
+    "# importing and displaying the csv file"
    ]
   },
   {
@@ -275,7 +301,9 @@
     "data = raw_data.copy()\n",
     "data['Admitted'] = data['Admitted'].map({'Yes':1,'No':0})\n",
     "data['Gender'] = data['Gender'].map({'Female':1,'Male':0})\n",
-    "data"
+    "data\n",
+    "\n",
+    "# mapping the variables: yes to 1 and no to 0, also splitting gender into binary (1 = female, 0 = male)"
    ]
   },
   {
@@ -292,7 +320,9 @@
    "outputs": [],
    "source": [
     "y = data['Admitted']\n",
-    "x1 = data[['SAT','Gender']]"
+    "x1 = data[['SAT','Gender']]\n",
+    "\n",
+    "# y = dependant variable (admittance), x1 = independant variables (SAT score and Gender)"
    ]
   },
   {
@@ -331,10 +361,10 @@
        "  <th>Method:</th>                 <td>MLE</td>       <th>  Df Model:          </th>  <td>     2</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>            <td>Sat, 06 Mar 2021</td> <th>  Pseudo R-squ.:     </th>  <td>0.8249</td>  \n",
+       "  <th>Date:</th>            <td>Sun, 06 Jun 2021</td> <th>  Pseudo R-squ.:     </th>  <td>0.8249</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>12:33:31</td>     <th>  Log-Likelihood:    </th> <td> -20.180</td> \n",
+       "  <th>Time:</th>                <td>16:19:37</td>     <th>  Log-Likelihood:    </th> <td> -20.180</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>converged:</th>             <td>True</td>       <th>  LL-Null:           </th> <td> -115.26</td> \n",
@@ -366,8 +396,8 @@
        "Dep. Variable:               Admitted   No. Observations:                  168\n",
        "Model:                          Logit   Df Residuals:                      165\n",
        "Method:                           MLE   Df Model:                            2\n",
-       "Date:                Sat, 06 Mar 2021   Pseudo R-squ.:                  0.8249\n",
-       "Time:                        12:33:31   Log-Likelihood:                -20.180\n",
+       "Date:                Sun, 06 Jun 2021   Pseudo R-squ.:                  0.8249\n",
+       "Time:                        16:19:37   Log-Likelihood:                -20.180\n",
        "converged:                       True   LL-Null:                       -115.26\n",
        "Covariance Type:            nonrobust   LLR p-value:                 5.118e-42\n",
        "==============================================================================\n",
@@ -393,7 +423,9 @@
     "x = sm.add_constant(x1)\n",
     "reg_log = sm.Logit(y,x)\n",
     "results_log = reg_log.fit()\n",
-    "results_log.summary()"
+    "results_log.summary()\n",
+    "\n",
+    "# applying the built in logistic regression model to the data"
    ]
   },
   {
@@ -414,22 +446,18 @@
    ],
    "source": [
     "np.exp(1.9449)\n",
-    "# using numpy to get the exponential of odds of both genders"
+    "\n",
+    "# using numpy to get the exponential of odds of both genders\n",
+    "# based on the coefficient of both Genders in the table above"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### result shows = given the SAT scor, a female has 7 times higher odds than a male to get admitted"
+    "### result shows:\n",
+    "### given the same SAT score, the chance of a female to get admitted are 7 times more likely than a male"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -471,10 +499,10 @@
    ],
    "source": [
     "np.set_printoptions(formatter={'float': lambda x: \"{0:0.2f}\".format(x)})\n",
-    "# formatting provided to make more eligible\n",
-    "\n",
     "results_log.predict()\n",
-    "# These are the values predicted by the model"
+    "\n",
+    "# These are the values predicted by the model\n",
+    "# (formatting provided to make the output more legible)"
    ]
   },
   {
@@ -502,6 +530,7 @@
    ],
    "source": [
     "np.array(data['Admitted'])\n",
+    "\n",
     "# These are the Actual Values"
    ]
   },
@@ -509,7 +538,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting values into a table"
+    "## Getting values into a table for easy comparison"
    ]
   },
   {
@@ -530,7 +559,9 @@
     }
    ],
    "source": [
-    "results_log.pred_table()"
+    "results_log.pred_table()\n",
+    "\n",
+    "# using statsmodels to get the regerssion results summed into an array"
    ]
   },
   {
@@ -594,23 +625,20 @@
     "cm_df.columns = ['Predicted 0', 'Predicted 1']\n",
     "cm_df = cm_df.rename(index={0:'Actual 0', 1:'Actualy 1'})\n",
     "cm_df\n",
-    "# Below is the 'Confusion Matrix' as it shows how confused our model is"
+    "\n",
+    "# this is the 'Confusion Matrix' as it shows how 'confused' our model is"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### we can see that for 69 observations the model precited 0 when true value was 1\n",
-    "##### for 90 observations, the model predicted 1 and the true value was also 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### however, the model was confused where 4 observations the model predicted 0 when 1 was true\n",
-    "##### and for 5 observations, the model predicted 1 when the vale was true"
+    "### Table Explained:\n",
+    "##### for 69 observations the model predicted 0 when true value was 0\n",
+    "##### for 90 observations, the model predicted 1 and the true value was 1\n",
+    "##### however, the model was confused by 9 observations:\n",
+    "##### for 4 observations the model predicted 0 when true value was 1\n",
+    "##### for 5 observations the model predicted 1 when true value was 0"
    ]
   },
   {
@@ -646,7 +674,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### we can now see our model is 94.6% accurrate"
+    "#### we can see our model is around 95% accurate!"
    ]
   },
   {
@@ -666,10 +694,11 @@
     }
    ],
    "source": [
-    "# here is some code that calculates the accuracy for us if we didn't want to do it manually\n",
     "cm = np.array(cm_df)\n",
     "accuracy_train = (cm[0,0]+cm[1,1])/cm.sum()\n",
-    "accuracy_train"
+    "accuracy_train\n",
+    "\n",
+    "# the above code also calculates the accuracy for us (useful for larger data sets)"
    ]
   },
   {
@@ -859,7 +888,9 @@
    ],
    "source": [
     "test = pd.read_csv(r'2.03.+Test+dataset.csv')\n",
-    "test"
+    "test\n",
+    "\n",
+    "# testing the model is done on data set not seen before by the model"
    ]
   },
   {
@@ -1043,7 +1074,9 @@
    "source": [
     "test['Admitted'] = test['Admitted'].map({'Yes': 1, 'No': 0})\n",
     "test['Gender'] = test['Gender'].map({'Female': 1, 'Male': 0})\n",
-    "test"
+    "test\n",
+    "\n",
+    "# mapping the variables again into binary categories, yes = 1, no = 0, female = 1, male = 0"
    ]
   },
   {
@@ -1172,7 +1205,9 @@
     }
    ],
    "source": [
-    "x"
+    "x\n",
+    "\n",
+    "# applying the built in logistic regression model to the new test data"
    ]
   },
   {
@@ -1354,23 +1389,25 @@
     }
    ],
    "source": [
-    "# New variable called 'test_actual'\n",
     "test_actual = test['Admitted']\n",
-    "# test_data variable contains everything from test, except for 'Admitted' data\n",
     "test_data = test.drop(['Admitted'],axis=1)\n",
     "test_data = sm.add_constant(test_data)\n",
+    "test_data\n",
     "\n",
-    "# if test_data not in the same order (which is must be!) then use following code to do this:\n",
-    "# test_data = test_data[x.columns.values]\n",
-    "test_data"
+    "# new variable 'test_actual' storing the admittance information (actual outcomes)\n",
+    "# new variable 'test_data' containing all the variables except the admittance feature\n",
+    "# adding a constant to the test data\n",
+    "\n",
+    "# if test_data is not in the same order (which it must be to work properly!) then use following code to do this:\n",
+    "# test_data = test_data[x.columns.values]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Manually creating a function called 'confusion matrix'\n",
-    "##### there are 3 arguments:  data (input data, actual values and the model)"
+    "### Manually creating 'confusion matrix'\n",
+    "##### there are 3 arguments:  (input data, actual values and the model)"
    ]
   },
   {
@@ -1385,7 +1422,10 @@
     "        bins=np.array([0,0.5,1])\n",
     "        cm = np.histogram2d(actual_values, pred_values, bins=bins)[0]\n",
     "        accuracy = (cm[0,0]+cm[1,1])/cm.sum()\n",
-    "        return cm, accuracy"
+    "        return cm, accuracy\n",
+    "    \n",
+    "# the function will use the regression model, made earlier, to predict admittance based on the data\n",
+    "# and summaries the values in a table, and calculating the accuracy"
    ]
   },
   {
@@ -1410,7 +1450,16 @@
    ],
    "source": [
     "cm = confusion_matrix(test_data, test_actual, results_log)\n",
-    "cm"
+    "cm\n",
+    "\n",
+    "# the array below is the confusion matrix, the number at bottom is the accuracy of the model (89%)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion: our model is 89% accurate at predicting admittance into a college based on SAT score and Gender"
    ]
   },
   {
@@ -1473,7 +1522,9 @@
     "cm_df = pd.DataFrame(cm[0])\n",
     "cm_df.columns = ['Predicted 0', 'Predicted 1']\n",
     "cm_df = cm_df.rename(index={0: 'Actual 0', 1: 'Actual 1'})\n",
-    "cm_df"
+    "cm_df\n",
+    "\n",
+    "# formatting the confusion matrix into an easy to read table"
    ]
   },
   {
@@ -1490,16 +1541,11 @@
     }
    ],
    "source": [
-    "# The missclassification rate is missclassified divided by all elements\n",
-    "print ('Missclassification rate: '+str((1+1)/19))"
+    "print ('Missclassification rate: '+str((1+1)/19))\n",
+    "\n",
+    "# the missclassification rate is the opposite of the accuracy rate\n",
+    "# it is the missclassified entries divided by the total entries"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
