updating explanatory notes

--- a/Udemy Course Data Analyst Exercises/TensorFlow - Machine Learning/Notes on Scalars, Vectors, Matrices and Tensors.ipynb
+++ b/Udemy Course Data Analyst Exercises/TensorFlow - Machine Learning/Notes on Scalars, Vectors, Matrices and Tensors.ipynb
@@ -404,7 +404,8 @@
     }
    ],
    "source": [
-    "t.shape      # we now have a 3D object, 2 by 2 by 3"
+    "t.shape\n",
+    "# we now have a 3D object, 2 by 2 by 3"
    ]
   },
   {
