--- a/Udemy Course Data Analyst Exercises/TensorFlow - Machine Learning/TF - Audiobooks - Business Case Study Part 1 (Pre-Processing).ipynb
+++ b/Udemy Course Data Analyst Exercises/TensorFlow - Machine Learning/TF - Audiobooks - Business Case Study Part 1 (Pre-Processing).ipynb
@@ -22,14 +22,32 @@
    "source": [
     "import numpy as np\n",
     "from sklearn import preprocessing\n",
-    "# use the sklearn library for standardizing the inputs\n",
+    "\n",
+    "# Numpy library has functions used for working with arrays and matrices\n",
+    "# faster, clearer and better quality code using Numpy\n",
+    "\n",
+    "# Tensorflow is an open-source Machine Learning library, particular focus on training and inference of deep neural networks\n",
+    "\n",
+    "# TensorFlow Datasets is a collection of datasets ready to use with TensorFlow\n",
     "\n",
     "raw_csv_data = np.loadtxt('Audiobooks_data.csv', delimiter = ',')\n",
     "\n",
+    "# importing the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "unscaled_inputs_all = raw_csv_data[:,1:-1]\n",
-    "# this takes all the data in the csv excep the 1st and last column, 1st column is arbitrarily chosen ID and last column is\n",
-    "# the target\n",
-    "targets_all = raw_csv_data[:,-1]"
+    "\n",
+    "# this takes all the data in the csv excep the 1st and last column\n",
+    "# 1st column is arbitrarily chosen ID and last column is the target\n",
+    "\n",
+    "targets_all = raw_csv_data[:,-1]\n",
+    "# this variable stores just the targets (in the last column)"
    ]
   },
   {
@@ -45,23 +63,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# we count the number of targets that are 1s\n",
-    "# we keep as many 0s as there are 1s (and delete the rest)\n",
-    "# summing all the targets give the exact number of 1s (0s + 1s = Number of 1s)\n",
     "num_one_targets = int(np.sum(targets_all))\n",
     "zero_targets_counter = 0\n",
     "indices_to_remove = []\n",
     "\n",
-    "# the shape of 'targets_all' on axis = 0, basically the length of the vector\n",
+    "# counts how many targets are 1s\n",
+    "# keep as many 0s as there are 1s (and delete the rest)\n",
+    "# the last variable removes the indices (using a tuple)\n",
+    "\n",
     "for i in range(targets_all.shape[0]):\n",
     "    if targets_all[i] ==0:\n",
     "        zero_targets_counter +=1\n",
     "        if zero_targets_counter > num_one_targets:\n",
     "            indices_to_remove.append(i)\n",
+    "            \n",
+    "# the shape of 'targets_all' on axis = 0, basically the length of the vector\n",
+    "# increase the counter by 1 if the target is 0\n",
+    "# when the count of 0s matches the number of 1s, then the rest can be removed\n",
     "\n",
-    "# np.delete(array, objects to delete, axis) is a method that deletes an object along an axis\n",
     "unscaled_inputs_equal_priors = np.delete(unscaled_inputs_all, indices_to_remove, axis=0)\n",
-    "targets_equal_priors = np.delete (targets_all, indices_to_remove, axis=0)"
+    "targets_equal_priors = np.delete (targets_all, indices_to_remove, axis=0)\n",
+    "\n",
+    "# np.delete is a method that deletes an object along an axis\n",
+    "# now the dataset will be balanced with an equal number of 1s and 0s\n",
+    "# and stored in the variable 'targets_equal_priors'"
    ]
   },
   {
@@ -78,7 +103,8 @@
    "outputs": [],
    "source": [
     "scaled_inputs = preprocessing.scale(unscaled_inputs_equal_priors)\n",
-    "# preprocessing.scale(x) is the library we imported from sklearn to standardize an array along an axis"
+    "\n",
+    "# preprocessing.scale is the library imported from sklearn to standardize an array along an axis"
    ]
   },
   {
@@ -94,15 +120,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Since we're batching, we must shuffle the inputs and the targets (keeps the same info but in randomized order)\n",
     "shuffled_indices = np.arange(scaled_inputs.shape[0])\n",
     "np.random.shuffle(shuffled_indices)\n",
+    "\n",
+    "# as the data is being batched, we must shuffle the inputs and the targets (keeps the same info but in randomized order)\n",
     "# np.arange([start], stop) is a method that returns evenly spaced values within a given interval\n",
-    "# then we use the np.random.shuffle(x) method to shuffle the numbers given in a sequence\n",
+    "# the np.random.shuffle method is used to shuffle the numbers in a sequence\n",
     "\n",
     "shuffled_inputs = scaled_inputs[shuffled_indices]\n",
     "shuffled_targets = targets_equal_priors[shuffled_indices]\n",
-    "# creates new variable to store shuffled, scaled inputs and another to store shuffled, correct number of targets"
+    "# new variables to store the shuffled, scaled inputs and another to store the shuffled, correct number of targets"
    ]
   },
   {
@@ -129,25 +156,33 @@
    ],
    "source": [
     "samples_count = shuffled_inputs.shape[0]\n",
-    "\n",
-    "# lets use the 80%, 10%, 10% split for the datasets\n",
     "train_samples_count = int(0.8*samples_count)\n",
     "validation_samples_count = int(0.1*samples_count)\n",
     "test_samples_count = samples_count - train_samples_count - validation_samples_count\n",
     "\n",
+    "# using the 80% (train), 10% (validate), 10% (test) split for the datasets\n",
+    "\n",
     "train_inputs = shuffled_inputs[:train_samples_count]\n",
     "train_targets = shuffled_targets[:train_samples_count]\n",
+    "\n",
+    "# applying the shuffling the training inputs and the targets\n",
     "\n",
     "validation_inputs = shuffled_inputs[train_samples_count:train_samples_count + validation_samples_count]\n",
     "validation_targets = shuffled_targets[train_samples_count:train_samples_count + validation_samples_count]\n",
     "\n",
+    "# the validation inputs will be the interval from train_samples_count + validation_samples_count\n",
+    "# same with the validation_targets\n",
+    "\n",
     "test_inputs = shuffled_inputs[train_samples_count + validation_samples_count:]\n",
     "test_targets = shuffled_targets[train_samples_count + validation_samples_count:]\n",
+    "\n",
+    "# the test inputs and targets are from everything that's left\n",
     "\n",
     "print(np.sum(train_targets), train_samples_count, np.sum(train_targets) / train_samples_count)\n",
     "print(np.sum(validation_targets), validation_samples_count, np.sum(train_targets / train_samples_count))\n",
     "print(np.sum(test_targets), test_samples_count, np.sum(test_targets) / test_samples_count)\n",
-    "# we want our priors to all be around 50% so the 3 sets are balanced - which is what we get here"
+    "\n",
+    "# we want our priors to all be around 50% (between 45-55) so the 3 sets are balanced - which is what we get here"
    ]
   },
   {
@@ -172,15 +207,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### All this code above can also be used to process ANY dataset with 2 classes"
+    "### All this code above can be used to process ANY dataset with 2 classes"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
